[package]
name = "monkey-lang-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "monkey_lang_lib"
path = "src/lib.rs"


[[bin]]
name = "monkey_lang"
path = "src/main.rs"

[[bin]]
name = "monkey_lang_repl"
path = "src/bin/repl.rs"


[dependencies]
nom = "7.1.1"
clap = "2.31.2"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"